--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "validator": "^13.15.20"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/validator": "^13.15.4",
     "prisma": "^6.18.0",
     "ts-node-dev": "^2.0.0",
